--- a/electrofira.html
+++ b/electrofira.html
@@ -21,7 +21,7 @@
         display: block;
         margin: 0 auto;
         position: relative;
-        background: black;
+        background: white;
         /* background: url('images/maquette2.jpg'); */
         font-family: 'Fira Code', monospace;
       }
@@ -62,30 +62,6 @@
           #000AFF 66.15%, #8F00FF 77.08%,
           #FF00F5 86.98%, #FF002E 100%);
         }
-      h1 {
-        position: absolute;
-        width: 664px;
-        height: 111px;
-        left: 97px;
-        top: 57px;
-        font-weight: bold;
-        font-size: 83px;
-        letter-spacing: 0.1em;
-        text-transform: uppercase;
-        /* border: 1px solid #FFFFFF; */
-        color: white;
-      }
-      h2 {position: absolute;
-        /* width: 557px; */
-        height: 56px;
-        left: 539px;
-        top: 266px;
-        font-weight: bold;
-        font-size: 43px;
-        letter-spacing: 0.05em;
-        text-transform: uppercase;
-        color: #FFFFFF;
-      }
       .subtitle {
         position: absolute;
         /* width: 620px; */
@@ -99,137 +75,172 @@
       }
       .blacksquare2 {
         position: absolute;
-        width: 1170px;
+        width: 1121px;
         height: 358px;
-        left: -49px;
+        /* left: -49px; */
         top: 90px;
-        background: #000000;
+        /* background: #000000; */
         border: 1px solid #FFFFFF;
         box-sizing: border-box;
       }
       .txtintro {
         position: absolute;
-width: 470px;
-height: 78px;
-left: 434px;
-top: 601px;
-font-weight: normal;
-font-size: 20px;
-line-height: 26px;
-color: #FFFFFF;
+        width: 470px;
+        height: 78px;
+        left: 434px;
+        top: 601px;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 26px;
+        color: #FFFFFF;
       }
       .points {
         position: absolute;
-width: 157.56px;
-height: 122.37px;
-left: 1155px;
-top: 53px;
+        width: 157.56px;
+        height: 122.37px;
+        left: 1050px;
+        top: 53px;
+      }
+      .img1 {
+        position: absolute;
+        width: 1280px;
+        height: 834px;
+        left: 0px;
+        top: 0px;
+      }
+      .img2 {
+        position: absolute;
+        width: 1280px;
+        height: 3278px;
+        left: 0px;
+        top: 1237px;
+      }
+      .imgdecosection1 {
+        position: absolute;
+        width: 402px;
+        height: 402px;
+        left: 889px;
+        top: 831px;
+      }
+      #txt1a {
+        position: absolute;
+        width: 420px;
+        height: 37px;
+        left: 70px;
+        top: 901px;
+      }
+      #txt1b {
+        position: absolute;
+        width: 17px;
+        height: 37px;
+        left: 473px;
+        top: 1130px;
+      }
+      #txtsection1 {
+        position: absolute;
+        width: 563px;
+        height: 144px;
+        left: 245px;
+        top: 962px;
+        color: #000000;
+      }
+      #txt2a {
+        position: absolute;
+        width: 370px;
+        height: 37px;
+        left: 70px;
+        top: 4585px;
+      }
+      #txt2b {
+        position: absolute;
+        width: 17px;
+        height: 37px;
+        left: 423px;
+        top: 4814px;
+      }
+      #txtsection2 {
+        position: absolute;
+        width: 518px;
+        height: 144px;
+        left: 245px;
+        top: 4646px;
+      }
+      #txt3a {
+        position: absolute;
+        width: 300px;
+        height: 37px;
+        left: 70px;
+        top: 6260px;
+        letter-spacing: 0.1em;
+      }
+      #txt3b {
+        position: absolute;
+        width: 17px;
+        height: 37px;
+        left: 345px;
+        top: 6537px;
+      }
+      #txtsection3 {
+        position: absolute;
+        width: 518px;
+        height: 192px;
+        left: 245px;
+        top: 6321px;
+        letter-spacing: 0.1em;
+      }
+      #txt4a {
+
+      }
+      #txt4b {
+
+      }
+      #txtsection4 {
+
+      }
+      .imglink1 {
+        position: absolute;
+        width: 501px;
+        height: 1604px;
+        left: 95px;
+        top: 1227px;
       }
     </style>
   </head>
 
   <body>
+    <div class="img1">
+      <img src="images/img1.jpg" alt="">
+    </div>
+    <div class="img2">
+      <img src="images/img2.jpg" alt="">
+    </div>
+    <div class="imglink1">
+      <img src="images/link1.png" alt="">
+    </div>
+    <div class="imgdecosection1">
+      <img src="images/decosection1.png" alt="">
+    </div>
     <div class="cadre">Электронная музыка Электронная музыка Электронная музыка Электронная музыка Электронная музыка Электронная музыка</div>
     <div class="blacksquare2"></div>
     <div class="fluosquare"></div>
     <div class="blacksquare"></div>
     <h1>WELCOME</h1>
     <h2>TO THE ELECTRO WORLD</h2>
+    <div class="points"><img src="images/points.png" alt=""></div>
     <div class="subtitle">Электронная музыка и ее невероятные инструменты</div>
-    <div style="position: absolute;
-                  width: 36.09px;
-                  height: 36.09px;
-                  left: 137.47px;
-                  top: 559px;
-                  background: #FFFFFF;">
-    </div>
-    <div style="position: absolute;
-                  width: 36.09px;
-                  height: 36.09px;
-                  left: 137.47px;
-                  top: 597.73px;
-                  background: #FFFFFF;">
-    </div>
-    <div style="position: absolute;
-                  width: 36.09px;
-                  height: 36.09px;
-                  left: 98.73px;
-                  top: 597.73px;
-                  background: #FFFFFF;">
-    </div>
-    <div style="position: absolute;
-                  width: 36.09px;
-                  height: 36.09px;
-                  left: 137.47px;
-                  top: 636.47px;
-                  background: #FFFFFF;">
-    </div><div style="position: absolute;
-                  width: 36.09px;
-                  height: 36.09px;
-                  left: 176.2px;
-                  top: 636.47px;
-                  background: #FFFFFF;">
-    </div><div style="position: absolute;
-                  width: 36.09px;
-                  height: 36.09px;
-                  left: 98.73px;
-                  top: 675.2px;
-                  background: #FFFFFF;">
-    </div>
-    </div><div style="position: absolute;
-                  width: 36.09px;
-                  height: 36.09px;
-                  left: 60px;
-                  top: 713.94px;
-                  background: #FFFFFF;">
-    </div>
-    <div style="position: absolute;
-width: 36.09px;
-height: 36.09px;
-left: 60px;
-top: 636.47px;
-border: 1px solid #FFFFFF;
-box-sizing: border-box;">
-    </div>
-    <div style="position: absolute;
-    width: 36.09px;
-    height: 36.09px;
-    left: 98.73px;
-    top: 636.47px;
-    border: 1px solid #FFFFFF;
-    box-sizing: border-box;">
-    </div>
-    <div style="position: absolute;
-      width: 36.09px;
-      height: 36.09px;
-      left: 137.47px;
-      top: 675.2px;
-      border: 1px solid #FFFFFF;
-      box-sizing: border-box;">
-    </div>
-    <div style="position: absolute;
-      width: 36.09px;
-      height: 36.09px;
-      left: 253.67px;
-      top: 636.47px;
-      border: 1px solid #FFFFFF;
-      box-sizing: border-box;">
-    </div>
-<div class="txtintro">
-  Электронная музыка — музыка, созданная с использованием электромузыкальных инструментов и электронных технологий
-</div>
-<div style="position: absolute;
-            width: 284px;
-            height: 168px;
-            left: 389px;
-            top: 558px;
-            border: 1px solid #FFFFFF;">
-</div>
-<div class="points">
-  <img src="iamges/points.jpg" alt="">
-</div>
+    <div class="txtintro">Электронная музыка — музыка, созданная с использованием электромузыкальных инструментов и электронных технологий</div>
 
-
-
+    <h3 id="txt1a">==> . Новые инструменты {</h3>
+    <p id="txtsection1">Желание композиторов создавать электронные инструменты восходит к концу девятнадцатого века. Первые инструменты были результатом зачастую долгих исследований. Первоначально это исследование было направлено на расширение оркестрового инструментария и на возможность исследования новых тембров.</p>
+    <h3 id="txt1b">}</h3>
+    <h3 id="txt2a">==> . К 1940-м годам {</h3>
+    <p id="txtsection2">магнитная аудиокассета позволила музыкантам записывать звуки, а затем изменять их, изменяя скорость или направление ленты, что привело к развитию электроакустической магнитофонной музыки или «Musique concrète» в 1940-х годах в Египте и Франции.</p>
+    <h3 id="txt2b">}</h3>
+    <h3 id="txt3a">==> . Музыка, {</h3>
+    <p id="txtsection3">созданная исключительно с помощью электронных генераторов, была впервые произведена в Германии в 1953 году. Электронная музыка также была создана в Японии и Соединенных Штатах, начиная с 1950-х годов. Важным новым событием стало появление компьютеров для сочинения музыки.</p>
+    <h3 id="txt3b">}</h3>
+    <h3 id="txt4a">==> . К 1940-м годам {</h3>
+    <p id="txtsection4">магнитная аудиокассета позволила музыкантам записывать звуки, а затем изменять их, изменяя скорость или направление ленты, что привело к развитию электроакустической магнитофонной музыки или «Musique concrète» в 1940-х годах в Египте и Франции.</p>
+    <h3 id="txt4b">}</h3>
   </body>
 </html>
