--- a/electrofira.html
+++ b/electrofira.html
@@ -189,13 +189,32 @@
         letter-spacing: 0.1em;
       }
       #txt4a {
-
+        position: absolute;
+        width: 292px;
+        height: 37px;
+        left: 70px;
+        top: 12041px;
       }
       #txt4b {
-
+        position: absolute;
+        width: 17px;
+        height: 37px;
+        left: 345px;
+        top: 12511px;
       }
-      #txtsection4 {
-
+      #txtsection4a {
+        position: absolute;
+        width: 441px;
+        height: 384px;
+        left: 245px;
+        top: 12103px;
+      }
+      #txtsection4b {
+        position: absolute;
+        width: 478px;
+        height: 240px;
+        left: 742px;
+        top: 12103px;
       }
       .imglink1 {
         position: absolute;
@@ -203,6 +222,20 @@
         height: 1604px;
         left: 95px;
         top: 1227px;
+      }
+      .img3 {
+        position: absolute;
+        width: 1280px;
+        height: 1431px;
+        left: 0px;
+        top: 4759px;
+      }
+      .img4 {
+        position: absolute;
+        width: 1280px;
+        height: 5327px;
+        left: 0px;
+        top: 6644px;
       }
     </style>
   </head>
@@ -239,8 +272,14 @@
     <h3 id="txt3a">==> . Музыка, {</h3>
     <p id="txtsection3">созданная исключительно с помощью электронных генераторов, была впервые произведена в Германии в 1953 году. Электронная музыка также была создана в Японии и Соединенных Штатах, начиная с 1950-х годов. Важным новым событием стало появление компьютеров для сочинения музыки.</p>
     <h3 id="txt3b">}</h3>
-    <h3 id="txt4a">==> . К 1940-м годам {</h3>
-    <p id="txtsection4">магнитная аудиокассета позволила музыкантам записывать звуки, а затем изменять их, изменяя скорость или направление ленты, что привело к развитию электроакустической магнитофонной музыки или «Musique concrète» в 1940-х годах в Египте и Франции.</p>
+    <h3 id="txt4a">==> . Сегодня {</h3>
+    <p id="txtsection4a">Примерно с 2000 года появился ряд программных виртуальных студийных сред, и такие продукты, как Reason от Propellerhead и Ableton Live, стали популярными.
+    А благодаря достижениям в области микропроцессорных технологий теперь можно создавать музыку высокого качества, используя чуть больше одного портативного компьютера. Такие достижения демократизировали создание музыки, что привело кзначительному увеличению количества домашней электронной музыки, доступной широкой публике через Интернет.</p>
+    <p id="txtsection4b">Эта тенденция сохраняется и по сей день: современные ночные клубы по всему миру регулярно исполняют электронную танцевальную музыку (EDM). Сегодня у электронной танцевальной музыки есть радиостанции, веб-сайты и издания, такие как Mixmag, посвященные исключительно этому жанру, и даже есть танец, который был изобретен для этого вида музыки: Electro Dance.</p>
     <h3 id="txt4b">}</h3>
+
+    <div class="img3"><img src="images/img3.png" alt=""></div>
+    <div class="img4"><img src="images/img4.png" alt=""></div>
+
   </body>
 </html>
