--- a/electrofira.html
+++ b/electrofira.html
@@ -30,15 +30,7 @@
         height: 14242px;
         position: relative;
       }
-      .cadre {
-        color: white;
-        font-size: 16px;
-        font-weight: lighter;
-        margin-left: 8px;
-        margin-top: 4px;
-        text-transform: uppercase;
-        letter-spacing: 0.1em;
-      }
+
       .blacksquare {
         position: absolute;
         width: 1107px;
@@ -190,10 +182,11 @@
       }
       #txt4a {
         position: absolute;
-        width: 292px;
+        width: 300px;
         height: 37px;
         left: 70px;
         top: 12041px;
+        letter-spacing: 0.1em;
       }
       #txt4b {
         position: absolute;
@@ -208,13 +201,24 @@
         height: 384px;
         left: 245px;
         top: 12103px;
+        letter-spacing: 0.1em;
       }
       #txtsection4b {
         position: absolute;
-        width: 478px;
+        width: 480px;
         height: 240px;
         left: 742px;
         top: 12103px;
+        letter-spacing: 0.1em;
+      }
+      .cadre {
+        color: white;
+        font-size: 16px;
+        font-weight: lighter;
+        margin-left: 8px;
+        margin-top: 4px;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
       }
       .imglink1 {
         position: absolute;
@@ -237,6 +241,78 @@
         left: 0px;
         top: 6644px;
       }
+      .img5 {
+        position: absolute;
+        width: 1280px;
+        height: 1795px;
+        left: 0px;
+        top: 12447px;
+      }
+      #h4-1{
+        width: 328px;
+        height: 34px;
+        left: 139px;
+        top: 1397px;
+      }
+      #h4-2{
+        position: absolute;
+        width: 94px;
+        height: 34px;
+        left: 139px;
+        top: 2724px;
+      }
+      #h4-3{
+        position: absolute;
+        width: 459px;
+        height: 34px;
+        left: 139px;
+        top: 5081px;
+      }
+      #h4-4{
+        position: absolute;
+        width: 459px;
+        height: 34px;
+        left: 139px;
+        top: 6804px;
+      }
+      #h4-5 {
+        position: absolute;
+        width: 459px;
+        height: 34px;
+        left: 139px;
+        top: 7028px;
+      }
+      #h4-6 {
+        position: absolute;
+        width: 459px;
+        height: 34px;
+        left: 141px;
+        top: 10896px;
+      }
+      #h4-7 {
+        position: absolute;
+        width: 459px;
+        height: 34px;
+        left: 139px;
+        top: 12778px;
+      }
+      #h4p1a {
+        position: absolute;
+        width: 495px;
+        height: 48px;
+        left: 152px;
+        top: 1445px;
+      }
+      #h4p1b {
+        position: absolute;
+        width: 395px;
+        height: 84px;
+        left: 152px;
+        top: 1553px;
+      }
+      .triangle {
+        
+      }
     </style>
   </head>
 
@@ -253,13 +329,13 @@
     <div class="imgdecosection1">
       <img src="images/decosection1.png" alt="">
     </div>
-    <div class="cadre">Электронная музыка Электронная музыка Электронная музыка Электронная музыка Электронная музыка Электронная музыка</div>
     <div class="blacksquare2"></div>
     <div class="fluosquare"></div>
     <div class="blacksquare"></div>
+    <div class="points"><img src="images/points.png" alt=""></div>
+    <div class="cadre">Электронная музыка Электронная музыка Электронная музыка Электронная музыка Электронная музыка Электронная музыка</div>
     <h1>WELCOME</h1>
     <h2>TO THE ELECTRO WORLD</h2>
-    <div class="points"><img src="images/points.png" alt=""></div>
     <div class="subtitle">Электронная музыка и ее невероятные инструменты</div>
     <div class="txtintro">Электронная музыка — музыка, созданная с использованием электромузыкальных инструментов и электронных технологий</div>
 
@@ -274,12 +350,23 @@
     <h3 id="txt3b">}</h3>
     <h3 id="txt4a">==> . Сегодня {</h3>
     <p id="txtsection4a">Примерно с 2000 года появился ряд программных виртуальных студийных сред, и такие продукты, как Reason от Propellerhead и Ableton Live, стали популярными.
-    А благодаря достижениям в области микропроцессорных технологий теперь можно создавать музыку высокого качества, используя чуть больше одного портативного компьютера. Такие достижения демократизировали создание музыки, что привело кзначительному увеличению количества домашней электронной музыки, доступной широкой публике через Интернет.</p>
-    <p id="txtsection4b">Эта тенденция сохраняется и по сей день: современные ночные клубы по всему миру регулярно исполняют электронную танцевальную музыку (EDM). Сегодня у электронной танцевальной музыки есть радиостанции, веб-сайты и издания, такие как Mixmag, посвященные исключительно этому жанру, и даже есть танец, который был изобретен для этого вида музыки: Electro Dance.</p>
+    <br>А благодаря достижениям в области микропроцессорных технологий теперь можно создавать музыку высокого качества, используя чуть больше одного портативного компьютера. Такие достижения демократизировали создание музыки, что привело кзначительному увеличению количества домашней электронной музыки, доступной широкой публике через Интернет.</p>
+    <p id="txtsection4b">Эта тенденция сохраняется и по сей день: современные ночные клубы по всему миру регулярно исполняют электронную танцевальную музыку (EDM).<br>Сегодня у электронной танцевальной музыки есть радиостанции, веб-сайты и издания, такие как Mixmag, посвященные исключительно этому жанру, и даже есть танец, который был изобретен для этого вида музыки: Electro Dance.</p>
     <h3 id="txt4b">}</h3>
 
     <div class="img3"><img src="images/img3.png" alt=""></div>
     <div class="img4"><img src="images/img4.png" alt=""></div>
+    <div class="img5"><img src="images/img5.png" alt=""></div>
+
+    <h4 id="h4-1">Итальянские футуристы</h4>
+      <p id="h4p1a">В начале XX века они исследовали звуки, которые не считались музыкальными.</p>
+      <p id="h4p1b">Футуристическая музыка отвергла традиции и представила экспериментальные звуки, вдохновленные механизмами, и повлияла на нескольких композиторов 20-го века.</p>
+    <h4 id="h4-2">Россия</h4>
+    <h4 id="h4-3">Musique concrète</h4>
+    <h4 id="h4-4">В 1960-х годах</h4>
+    <h4 id="h4-5">В 1970-х годах</h4>
+    <h4 id="h4-6">В 1980-х годах</h4>
+    <h4 id="h4-7">Electro dance</h4>
 
   </body>
 </html>
