--- a/index.html
+++ b/index.html
@@ -310,8 +310,27 @@
         left: 152px;
         top: 1553px;
       }
+      #h4p1c {
+        position: absolute;
+        width: 349px;
+        height: 108px;
+        left: 245px;
+        top: 1787px;
+      }
       .triangle {
-        
+        font-weight: normal;
+        font-size: 35px;
+        color: white;
+        left: 215px;
+        top: 1780px;
+        position: absolute;
+      }
+      #h4p2a {
+        position: absolute;
+        width: 461px;
+        height: 48px;
+        left: 152px;
+        top: 2772px;
       }
     </style>
   </head>
@@ -361,7 +380,12 @@
     <h4 id="h4-1">Итальянские футуристы</h4>
       <p id="h4p1a">В начале XX века они исследовали звуки, которые не считались музыкальными.</p>
       <p id="h4p1b">Футуристическая музыка отвергла традиции и представила экспериментальные звуки, вдохновленные механизмами, и повлияла на нескольких композиторов 20-го века.</p>
+      <p id="h4p1c">Луиджи Руссоло использовал инструменты, которые он назвал интонарумори, которые были генераторами акустического шума, которые позволяли исполнителю создавать и контролировать динамику и высоту тона нескольких различных типов шумов.</p>
+      <div class="triangle">
+        <
+      </div>
     <h4 id="h4-2">Россия</h4>
+      <p id="h4p2a">Другое событие, вызвавшее интерес у многих композиторов, произошло в 1919-1920 годах.</p>
     <h4 id="h4-3">Musique concrète</h4>
     <h4 id="h4-4">В 1960-х годах</h4>
     <h4 id="h4-5">В 1970-х годах</h4>
