--- a/index.html
+++ b/index.html
@@ -321,6 +321,8 @@
         font-weight: normal;
         font-size: 35px;
         color: white;
+      }
+      #tr1 {
         left: 215px;
         top: 1780px;
         position: absolute;
@@ -332,6 +334,42 @@
         left: 152px;
         top: 2772px;
       }
+      #h4p2b {
+        position: absolute;
+        width: 438px;
+        height: 189px;
+        left: 152px;
+        top: 2880px;
+      }
+      #tr2 {
+        position: absolute;
+        width: 18px;
+        height: 39px;
+        left: 214px;
+        top: 3625px;
+      }
+      #h4p2C {
+        position: absolute;
+        width: 343px;
+        height: 198px;
+        left: 245px;
+        top: 3636px;
+      }
+      #h4p2d {
+        position: absolute;
+        width: 787px;
+        height: 24px;
+        left: 245px;
+        top: 4027px;
+      }
+      #tr3 {
+        position: absolute;
+        width: 18px;
+        height: 39px;
+        left: 214px;
+        top: 4018px;
+      }
+
     </style>
   </head>
 
@@ -382,10 +420,21 @@
       <p id="h4p1b">Футуристическая музыка отвергла традиции и представила экспериментальные звуки, вдохновленные механизмами, и повлияла на нескольких композиторов 20-го века.</p>
       <p id="h4p1c">Луиджи Руссоло использовал инструменты, которые он назвал интонарумори, которые были генераторами акустического шума, которые позволяли исполнителю создавать и контролировать динамику и высоту тона нескольких различных типов шумов.</p>
       <div class="triangle">
-        <
+        <div id="tr1"><</div>
       </div>
     <h4 id="h4-2">Россия</h4>
       <p id="h4p2a">Другое событие, вызвавшее интерес у многих композиторов, произошло в 1919-1920 годах.</p>
+      <p id="h4p2b">В Ленинграде Термен Лев Сергеевич построил и продемонстрировал свой Этерофон, который позже был переименован в Терменвокс.
+        Это привело к созданию первых композиций для электронных инструментов, в отличие от шумогенераторов и переделанных машин. Терменвокс был известен тем, что был первым музыкальным инструментом, на котором играли, не касаясь его.</p>
+      <p id="h4p2C">При создании инструмента (помимо электрической генерации звука) Термен обращал особое внимание на «возможность весьма тонкого управления без какой-либо затраты механической энергии, требуемой для нажатия струн или клавиш. Исполнение музыки на электрическом инструменте должно производиться, например, свободными движениями пальцев в воздухе, аналогично дирижёрским жестам, на расстоянии от инструмента».</p>
+      <div class="triangle">
+        <div id="tr2"><</div>
+      </div>
+      <p id="h4p2d">Этот инструмент продолжают использовать и сегодня.</p>
+      <div class="triangle">
+        <div id="tr3"><</div>
+      </div>
+
     <h4 id="h4-3">Musique concrète</h4>
     <h4 id="h4-4">В 1960-х годах</h4>
     <h4 id="h4-5">В 1970-х годах</h4>
